--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/ipps2
+spring.datasource.url=jdbc:postgresql://localhost:5433/ippstest
 spring.datasource.username=postgres
 spring.datasource.password=1111
 spring.jpa.generate-ddl=true
