--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5433/ippstest
+spring.datasource.url=jdbc:postgresql://localhost:5432/ipps2
 spring.datasource.username=postgres
 spring.datasource.password=1111
 spring.jpa.generate-ddl=true
+
 
